# sync_tooling_msgs

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.py
examples/: clock_alias_update_examples.py  clock_diff_measurement_examples.py  clock_master_update_examples.py  phc2sys_update_examples.py  port_state_update_examples.py  ptp_parent_update_examples.py  self_reported_clock_state_update_examples.py
proto/: clock_alias_update.proto  clock_diff_measurement.proto  clock_id.proto  clock_master_update.proto  clock_state_update.proto  diag_status.proto  diag_tree.proto  error.proto  frame_id.proto  graph_update.proto  phc2sys_update.proto  port_id.proto  ptp_parent_update.proto  warning.proto
proto/sync_tooling_msgs/: clock_alias_update.proto  clock_diff_measurement.proto  clock_id.proto  clock_master_update.proto  clock_time_snapshot.proto  diag_status.proto  diag_tree.proto  error.proto  graph_update.proto  interface_id.proto  linux_clock_device_id.proto  ok.proto  phc2sys_status_message.proto  phc2sys_update.proto  port_id.proto  port_state.proto  port_state_update.proto  ptp4l_port_status_message.proto  ptp4l_status_message.proto  ptp_clock_id.proto  ptp_parent_update.proto  self_reported_clock_state_update.proto  sensor_id.proto  servo_state.proto  slave_clock_state.proto  system_clock_id.proto  unknown.proto  warning.proto
src/sync_tooling_msgs/: __init__.py  clock_id.py  diag_tree.py  port_id.py  port_state.py  self_reported_clock_state.py  servo_state.py  util.py
tests/: clock_id_test.py  conftest.py  hashing_test.py  port_state_test.py  servo_state_test.py
