<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sync_tooling_msgs</name>
  <version>0.2.3</version>
  <description>Protobuf definitions for synchronization diagnostics</description>
  <maintainer email="max.schmeller@tier4.jp">Max Schmeller</maintainer>

  <license>Apache 2</license>
  <author>Tier IV</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>protobuf-dev</buildtool_depend>

  <exec_depend>protobuf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
