[project]
name = "sync-tooling-msgs"
version = "0.1.0"
description = "Protobuf definitions for sync tooling."
authors = [
    { name = "Max SCHMELLER", email = "max.schmeller@tier4.jp" }
]
requires-python = ">=3.10"
dependencies = [
    "protobuf>=5.29.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
artifacts = ["build/python_out"]

[tool.hatch.build.targets.wheel.force-include]
"./build/python_out" = "sync_tooling_msgs"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
