[project]
name = "sync-tooling-msgs"
version = "0.1.0"
description = "Protobuf definitions for sync tooling."
authors = [
    { name = "Max SCHMELLER", email = "max.schmeller@tier4.jp" }
]
requires-python = ">=3.10"
dependencies = [
    "protobuf>=5.29.3",
]

[build-system]
requires = ['setuptools', "grpcio-tools>=1.70.0"]
build-backend = 'setuptools.build_meta'
